# edu_desk

./: .gitignore  README.md  TACCountDownDialog.cpp  TACCountDownDialog.h  TACCountDownWidget.cpp  TACCountDownWidget.h
Common/: ArrangeSeatDialog.h  AudioReceiver.cpp  AudioReceiver.h  AvatarLabel.cpp  AvatarLabel.h  CellCommentWidget.cpp  CellCommentWidget.h  ChatDialog.h  ClassTeacherDelDialog.h  ClassTeacherDialog.h  ClickableLabel.h  CommentInputDialog.h  CommentStorage.cpp  CommentStorage.h  Common.sln  Common.vcxproj  Common.vcxproj.filters  CommonInfo.cpp  CommonInfo.h  CommonInfo.h.cpp  CourseDialog.h  CourseTableWidget.h  CustomListDialog.cpp  CustomListDialog.h  CustomMessageDialog.h  DutyRosterDialog.cpp  DutyRosterDialog.h  ExcelGradeGenerator.cpp  ExcelGradeGenerator.h  FriendGroupDialog.cpp  FriendGroupDialog.h  FriendNotifyDialog.h  FriendSelectDialog.cpp  FriendSelectDialog.h  GenerateGradeSheet.cpp  GenerateTestUserSig.cpp  GenerateTestUserSig.h  GroupNotifyDialog.h  GroupScoreDialog.cpp  GroupScoreDialog.h  (+88 more)
TeacherAssistantClient/: Resource.qrc  TACApp.cpp  TACApp.h  TACClassWeekCourseScheduleDialog.cpp  TACClassWeekCourseScheduleDialog.h  TACCountDownDialog.cpp  TACCountDownDialog.h  TACCountDownWidget.cpp  TACCountDownWidget.h  TACCourseSchedule.cpp  TACCourseSchedule.h  TACDateTimeDialog.cpp  TACDateTimeDialog.h  TACDateTimeWidget.cpp  TACDateTimeWidget.h  TACDesktopManagerWidget.cpp  TACIMDialog.h  (+43 more)
tauri-app/src-tauri/: 2  Cargo.toml  build_log.txt  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs
(+80 files in other folders)
